src/test/ui/access-mode-in-closures.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/access-mode-in-closures.rs:8:15
   |
LL |         match *s { S(v) => v }
   |               ^^     - hint: to prevent move, use `ref v` or `ref mut v`
   |               |
   |               cannot move out of borrowed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
